--- a/lib/generators/ruby_llm/install/templates/create_chats_migration.rb.tt
+++ b/lib/generators/ruby_llm/install/templates/create_chats_migration.rb.tt
@@ -1,8 +1,6 @@
-# frozen_string_literal: true
-
-class CreateChats < ActiveRecord::Migration<%= migration_version %>
+class Create<%= options[:chat_model_name].pluralize %> < ActiveRecord::Migration<%= migration_version %>
   def change
-    create_table :chats do |t|
+    create_table :<%= options[:chat_model_name].tableize %> do |t|
       t.string :model_id
       t.timestamps
     end
