--- a/lib/generators/ruby_llm/install/templates/create_messages_migration.rb.tt
+++ b/lib/generators/ruby_llm/install/templates/create_messages_migration.rb.tt
@@ -1,17 +1,15 @@
-# frozen_string_literal: true
-
-# This migration must be run AFTER create_chats and create_tool_calls migrations
+# This migration must be run AFTER create_<%= options[:chat_model_name].tableize %> and create_<%= options[:tool_call_model_name].tableize %> migrations
 # to ensure proper foreign key references
-class CreateMessages < ActiveRecord::Migration<%= migration_version %>
+class Create<%= options[:message_model_name].pluralize %> < ActiveRecord::Migration<%= migration_version %>
   def change
-    create_table :messages do |t|
-      t.references :chat, null: false, foreign_key: true
+    create_table :<%= options[:message_model_name].tableize %> do |t|
+      t.references :<%= options[:chat_model_name].tableize.singularize %>, null: false, foreign_key: true
       t.string :role
       t.text :content
       t.string :model_id
       t.integer :input_tokens
       t.integer :output_tokens
-      t.references :tool_call, foreign_key: true
+      t.references :<%= options[:tool_call_model_name].tableize.singularize %>
       t.timestamps
     end
   end
