--- a/lib/generators/ruby_llm/install/templates/chat_model.rb.tt
+++ b/lib/generators/ruby_llm/install/templates/chat_model.rb.tt
@@ -1,5 +1,3 @@
-# frozen_string_literal: true
-
-class Chat < ApplicationRecord
-  acts_as_chat
+class <%= options[:chat_model_name] %> < ApplicationRecord
+  <%= acts_as_chat_declaration %>
 end
