--- a/lib/generators/ruby_llm/install/templates/message_model.rb.tt
+++ b/lib/generators/ruby_llm/install/templates/message_model.rb.tt
@@ -1,5 +1,3 @@
-# frozen_string_literal: true
-
-class Message < ApplicationRecord
-  acts_as_message
+class <%= options[:message_model_name] %> < ApplicationRecord
+  <%= acts_as_message_declaration %>
 end
