--- a/lib/generators/ruby_llm/install/templates/tool_call_model.rb.tt
+++ b/lib/generators/ruby_llm/install/templates/tool_call_model.rb.tt
@@ -1,5 +1,3 @@
-# frozen_string_literal: true
-
-class ToolCall < ApplicationRecord
-  acts_as_tool_call
+class <%= options[:tool_call_model_name] %> < ApplicationRecord
+  <%= acts_as_tool_call_declaration %>
 end
