--- a/lib/generators/ruby_llm/install/templates/create_messages_migration.rb.tt
+++ b/lib/generators/ruby_llm/install/templates/create_messages_migration.rb.tt
@@ -1,5 +1,4 @@
-# This migration must be run AFTER create_<%= options[:chat_model_name].tableize %> and create_<%= options[:tool_call_model_name].tableize %> migrations
-# to ensure proper foreign key references
+# Migration for creating messages table with references to chats and tool_calls
 class Create<%= options[:message_model_name].pluralize %> < ActiveRecord::Migration<%= migration_version %>
   def change
     create_table :<%= options[:message_model_name].tableize %> do |t|
