Set default value on the model level

--- a/lib/generators/ruby_llm/install/templates/tool_call_model.rb.tt
+++ b/lib/generators/ruby_llm/install/templates/tool_call_model.rb.tt
@@ -1,3 +1,4 @@
 class <%= options[:tool_call_model_name] %> < ApplicationRecord
+  after_initialize { self.arguments ||= {} }
   <%= acts_as_tool_call_declaration %>
 end
