Support namespaced models in all generated migrations

--- a/lib/generators/ruby_llm/install/templates/create_chats_migration.rb.tt
+++ b/lib/generators/ruby_llm/install/templates/create_chats_migration.rb.tt
@@ -1,7 +1,7 @@
-class Create<%= chat_model_name.pluralize %> < ActiveRecord::Migration<%= migration_version %>
+class Create<%= chat_model_name.gsub('::', '').pluralize %> < ActiveRecord::Migration<%= migration_version %>
   def change
-    create_table :<%= chat_model_name.tableize %> do |t|
-      t.references :<%= model_model_name.tableize.singularize %>, foreign_key: true
+    create_table :<%= chat_table_name %> do |t|
+      t.references :<%= model_table_name.singularize %>, foreign_key: true
       t.timestamps
     end
   end
