fix: correct RubyLLM::Models.resolve method calls in migration
The migration was incorrectly calling resolve as an instance method (RubyLLM.models.resolve) when it's actually a class method.

--- a/lib/generators/ruby_llm/upgrade_to_v1_7/templates/migration.rb.tt
+++ b/lib/generators/ruby_llm/upgrade_to_v1_7/templates/migration.rb.tt
@@ -71,7 +71,7 @@ class MigrateToRubyLLMModelReferences < ActiveRecord::Migration<%= migration_ver
     return if model_id.blank?
 
     begin
-      model_info, _provider = RubyLLM.models.resolve(model_id, provider: provider)
+      model_info, _provider = RubyLLM::Models.resolve(model_id, provider: provider)
 
       model_class.find_or_create_by!(
         model_id: model_info.id,
