Fix xAI logo not changing color in dark mode

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -45,6 +45,7 @@
   .provider-icons img[src*="-text.svg"],
   .provider-logo img[src*="/ollama.svg"],
   .provider-logo img[src*="/openai.svg"],
+  .provider-logo img[src*="/xai.svg"],
   .provider-logo img[src*="/openrouter.svg"],
   .chatwithwork-logo {
     filter: invert(1);
