--- a/lib/generators/ruby_llm/chat_ui/templates/views/messages/_message.html.erb.tt
+++ b/lib/generators/ruby_llm/chat_ui/templates/views/messages/_message.html.erb.tt
@@ -3,7 +3,13 @@
   <div style="font-weight: bold; margin-bottom: 5px;">
     <%%= <%= message_model_name.demodulize.underscore %>.role&.capitalize %>
   </div>
-  <div id="<%= message_variable_name %>_<%%= <%= message_model_name.demodulize.underscore %>.id %>_content" style="white-space: pre-wrap;"><%%= <%= message_model_name.demodulize.underscore %>.content %></div>
+  <%% if <%= message_model_name.demodulize.underscore %>.content.present? %>
+    <div id="<%= message_variable_name %>_<%%= <%= message_model_name.demodulize.underscore %>.id %>_content" style="white-space: pre-wrap;"><%%= <%= message_model_name.demodulize.underscore %>.content %></div>
+  <%% elsif <%= message_model_name.demodulize.underscore %>.content_raw.present? && <%= message_model_name.demodulize.underscore %>.content_raw.is_a?(Hash) %>
+    <div id="<%= message_variable_name %>_<%%= <%= message_model_name.demodulize.underscore %>.id %>_content">
+      <%%= render "<%= message_model_name.underscore.pluralize %>/content_raw", content: <%= message_model_name.demodulize.underscore %>.content_raw %>
+    </div>
+  <%% end %>
   <%% if <%= message_model_name.demodulize.underscore %>.tool_call? %>
     <%%= render "<%= message_model_name.underscore.pluralize %>/tool_calls", <%= message_model_name.demodulize.underscore %>: <%= message_model_name.demodulize.underscore %> %>
   <%% end %>
