--- a/lib/generators/ruby_llm/install/templates/create_chats_migration.rb.tt
+++ b/lib/generators/ruby_llm/install/templates/create_chats_migration.rb.tt
@@ -1,4 +1,4 @@
-class Create<%= chat_model_name.gsub('::', '').pluralize %> < ActiveRecord::Migration<%= migration_version %>
+class <%= create_migration_class_name(chat_table_name) %> < ActiveRecord::Migration<%= migration_version %>
   def change
     create_table :<%= chat_table_name %> do |t|
       t.timestamps
